[project]
name = "drop2md"
version = "1.0.0"
description = "A modern, minimalist web interface for file conversion built on Microsoft's MarkItDown"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "streamlit>=1.32.0",
    "markitdown[all]>=0.1.2",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
